<resources>
    <string name="app_name">We Chat!</string>
    <string name="login_etUserName">UserName</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="register_btn">Register</string>
    <string name="Register_etUserName">UserName</string>
    <string name="register_etPassword">Password</string>
    <string name="Register_etNickName">NickName</string>
    <string name="Register_etPassword_Validation">Password Validation</string>
    <string name="registered_click_for_sign">Not registered? click here for sign</string>
    <string name="btn_add_contact">Add Contact</string>
    <string name="et_server">server</string>
    <string name="write_here">write here...</string>
    <string name="send">send</string>
    <string name="BaseUrl">http://10.0.2.2:5001/api/</string>
    <string name="btn_change_default_server">Change Default Server</string>
    <string name="enter_new_default_server">Enter base URL format with new default server... </string>
</resources>